Fix alignment of delete buttons

--- a/app/styles/query-builder.less
+++ b/app/styles/query-builder.less
@@ -156,7 +156,7 @@
                         margin-right: 3px;
                     }
 
-                    &.btn-delete-clause {
+                    &.btn-delete {
                         i {
                             margin-right: 0;
                         }
